style.css
h1 {
    text-align: center;
    font-size: 34px;
    letter-spacing: 1.3;
}
h2 {
    font-size: 20px;
    font-weight: 500;
    margin-bottom: 22px;
}
h3 {
    font-size: 18px;
    font-weight: 500;
    margin-bottom: 0px;
}
body {
    font-family: Sans-Serif;
    background-color: #F5F5F5;
}
p {
    color: #8F8F8F;
}
#navigation {
    display: flex;
    padding-left: 30px;
    padding-top: 30px;
}
#navigation .navigation-item {
    margin-right: 20px;
    font-size: 20px;
    font-weight: 500;
    letter-spacing: 1.5;
    color: #8F8F8F;
}
#navigation .selected {
    color: #333333;
}
#main-container {
    display: flex;
    flex-direction: column;
    max-width: 820px;
    margin: 0 auto;
    padding: 20px;
}
#description {
    text-align: center;
    margin-bottom: 60px;
    line-height: 1.8;
}
#gallery {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
#gallery p {
    line-height: 1.4;
}
#download-badge-container {
    display: flex;
    justify-content: center;
    padding: 25px 0px;
}
#privacy-policy h2 {
    text-align: center;
}
#privacy-policy p {
    line-height: 1.8;
}
#copyright {
    margin-top: 30px;
    text-align: center;
}
#copyright p {
    color: #AFAFAF;
}
.gallery-item {
    width: 30%;
}
.gallery-item p {
    margin-top: 10px;
    font-size: 0.9em;
}
@media only screen and (hover: none) and (pointer: coarse) {
    #gallery {
        flex-direction: column;
    }
    .gallery-item {
        align-self: center;
        width: 90%;
    }
    #navigation {
        justify-content: center;
        margin-top: 20px;
        margin-bottom: 30px;
    }
}

